# energy-loss

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  scope.md  startup.md
energy_loss/: __init__.py  api.py  config.py  constants.py  materials.py  particles.py  units.py
energy_loss/backends/: __init__.py  geant4_runner.py
energy_loss/data/: __init__.py  materials.yaml
energy_loss/data/nist/: astar_photographic_emulsion.csv  pstar_photographic_emulsion.csv
energy_loss/emulsion/: __init__.py  range_energy.py
energy_loss/models/: __init__.py  registry.py
energy_loss/range/: __init__.py  table.py
energy_loss/stopping/: __init__.py  bethe.py  models.py
energy_loss/transport/: __init__.py  layer.py  propagate.py
examples/: emulsion_range_to_energy.py  generate_geant4_table.py  plot_comparison.py  plot_verification.py  spectroscopy_loss.py
examples/configs/: alpha_in_emulsion.yaml  emulsion_track.yaml  geant4_table.yaml  geant4_table_atima.yaml  jparc_e10_km.yaml  jparc_e10_pim.yaml  jparc_e10_stack.yaml
geant4/: CMakeLists.txt  README.md
geant4/src/: main.cc
scripts/: fetch_nist_emulsion.py
tests/: test_api.py  test_bethe.py  test_config.py  test_geant4_backend.py  test_materials.py  test_range_table.py  test_transport.py  test_validity.py
tools/: fetch_nist_tables.py
