[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "energy_loss"
version = "0.1.0"
description = "Energy loss, stopping power, and range-energy relation for charged particles in matter."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Shuhei Hayakawa" }]
dependencies = [
  "numpy>=1.26",
  "scipy>=1.11",
  "pyyaml>=6.0",
  "periodictable>=1.7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
]

[tool.setuptools.packages.find]
include = ["energy_loss*"]
exclude = ["tests*", "examples*"]

[tool.setuptools.package-data]
energy_loss = ["data/*.yaml"]

[tool.ruff]
line-length = 100
indent-width = 2
target-version = "py311"

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "B",
  "UP",
  "W",
]
ignore = [
  "E501",
]

[tool.ruff.format]
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
